# cmake_c-_demo

./: CMakeLists.txt  README.md
cmake/: Findblog.cmake
src/: main.cc
src/blog/: CMakeLists.txt  blog.cc  blog.h
src/hello/: CMakeLists.txt  hello.cc  hello.h
